Added users management functionality
